--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
@@ -52,7 +52,7 @@
 
   <!-- note -->
   <div>
-    <mat-form-field>
+    <mat-form-field style="width: 90%;max-width: 800px;">
       <textarea
         rows="2"
         matInput
