--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,8 @@
       that that part's editor is not yet ready.
     </p>
     <p *ngIf="!logged">
-      <strong>Please <a routerLink="/login">login</a> to start.</strong>
+      <mat-icon>login</mat-icon>&nbsp;
+      Please <a routerLink="/login">login</a> to start.
     </p>
 
     <h2>Sub-Models</h2>
