--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-events-part/person-events-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-events-part/person-events-part.component.html
@@ -1,1 +1,106 @@
-<p>person-events-part works!</p>
+<form [formGroup]="form" (submit)="save()">
+  <mat-card>
+    <mat-card-header>
+      <div mat-card-avatar>
+        <mat-icon>picture_in_picture</mat-icon>
+      </div>
+      <mat-card-title>Person Events Part</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-tab-group [(selectedIndex)]="tabIndex">
+        <mat-tab label="events">
+          <div>
+            <button
+              type="button"
+              mat-icon-button
+              color="primary"
+              matTooltip="Add event"
+              (click)="addEvent()"
+            >
+              <mat-icon>add_circle</mat-icon>
+            </button>
+          </div>
+          <table *ngIf="events?.length">
+            <thead>
+              <tr>
+                <th></th>
+                <th>type</th>
+                <th>date</th>
+                <th>places</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr
+                *ngFor="
+                  let e of events;
+                  let i = index;
+                  let first = first;
+                  let last = last
+                "
+              >
+                <td>
+                  <button
+                    type="button"
+                    mat-icon-button
+                    color="primary"
+                    matTooltip="Edit this event"
+                    (click)="editEvent(i)"
+                  >
+                    <mat-icon>edit</mat-icon>
+                  </button>
+                  <button
+                    type="button"
+                    mat-icon-button
+                    matTooltip="Move this event up"
+                    [disabled]="first"
+                    (click)="moveEventUp(i)"
+                  >
+                    <mat-icon>arrow_upward</mat-icon>
+                  </button>
+                  <button
+                    type="button"
+                    mat-icon-button
+                    matTooltip="Move this event down"
+                    [disabled]="last"
+                    (click)="moveEventDown(i)"
+                  >
+                    <mat-icon>arrow_downward</mat-icon>
+                  </button>
+                  <button
+                    type="button"
+                    mat-icon-button
+                    color="warn"
+                    matTooltip="Delete this event"
+                    (click)="deleteEvent(i)"
+                  >
+                    <mat-icon>remove_circle</mat-icon>
+                  </button>
+                </td>
+                <td>{{ e.type }}</td>
+                <td>{{ dateToString(e.date) }}</td>
+                <td>{{ placesToString(e.places) }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </mat-tab>
+
+        <mat-tab label="event" *ngIf="editedEvent">
+          <cadmus-bio-event
+            [model]="editedEvent"
+            [typeEntries]="typeEntries"
+            [partTagEntries]="partTagEntries"
+            (modelChange)="onEventSaved($event)"
+            (editorClose)="onEventClosed()"
+          ></cadmus-bio-event>
+        </mat-tab>
+      </mat-tab-group>
+    </mat-card-content>
+    <mat-card-actions>
+      <cadmus-close-save-buttons
+        [form]="form"
+        [noSave]="userLevel < 2"
+        (closeRequest)="close()"
+      ></cadmus-close-save-buttons>
+    </mat-card-actions>
+  </mat-card>
+</form>
