Fixes to bio event editor

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-events-part/person-events-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-events-part/person-events-part.component.html
@@ -14,10 +14,9 @@
               type="button"
               mat-icon-button
               color="primary"
-              matTooltip="Add event"
               (click)="addEvent()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add event
             </button>
           </div>
           <table *ngIf="events?.length">
