Fixes to decorated IDs editor

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
@@ -1,131 +1,134 @@
-<mat-tab-group [(selectedIndex)]="tabIndex">
-  <!-- list -->
-  <mat-tab label="list">
+<!-- list -->
+<div>
+  <button mat-stroked-button (click)="editNewId()" color="primary">
+    <mat-icon>add_circle</mat-icon> add ID
+  </button>
+</div>
+<table *ngIf="ids?.length">
+  <thead>
+    <tr>
+      <th></th>
+      <th>id</th>
+      <th>rnk</th>
+      <th>tag</th>
+      <th>src</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr
+      *ngFor="let id of ids; let i = index"
+      [class.selected]="i === editedIndex"
+    >
+      <td>
+        <button
+          color="primary"
+          mat-icon-button
+          matTooltip="Edit this ID"
+          (click)="editId(i)"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button
+          color="warn"
+          mat-icon-button
+          matTooltip="Delete this ID"
+          (click)="deleteId(i)"
+        >
+          <mat-icon>remove_circle</mat-icon>
+        </button>
+      </td>
+      <td>{{ id.id }}</td>
+      <td>{{ id.rank }}</td>
+      <td>{{ id.tag }}</td>
+      <td>{{ id.sources?.length || 0 }}</td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- editor -->
+<mat-expansion-panel [(expanded)]="editorOpen">
+  <mat-expansion-panel-header>
+    <mat-panel-title>ID</mat-panel-title>
+    <mat-panel-description>
+      {{ editedId?.id }}
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+  <form [formGroup]="form" (submit)="saveEditedId()">
+    <!-- id -->
     <div>
-      <button mat-stroked-button (click)="editNewId()" color="primary">
-        <mat-icon>add_circle</mat-icon> add ID
+      <mat-form-field>
+        <input matInput [formControl]="id" placeholder="ID" />
+        <mat-error *ngIf="id.hasError('required') && (id.dirty || id.touched)"
+          >enter ID</mat-error
+        >
+        <mat-error *ngIf="id.hasError('max-length') && (id.dirty || id.touched)"
+          >ID too long</mat-error
+        >
+      </mat-form-field>
+    </div>
+    <div>
+      <!-- rank -->
+      <mat-form-field style="width: 3em">
+        <input
+          matInput
+          [formControl]="rank"
+          placeholder="rank"
+          type="number"
+          min="0"
+        />
+      </mat-form-field>
+      &nbsp;
+      <!-- tag (bound) -->
+      <ng-container *ngIf="tagEntries">
+        <mat-form-field style="width: 8em">
+          <mat-select [formControl]="tag" placeholder="tag">
+            <mat-option *ngFor="let e of tagEntries" [value]="e.id">{{
+              e.value
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </ng-container>
+      <!-- tag (free) -->
+      <ng-container *ngIf="!tagEntries">
+        <mat-form-field style="width: 6em">
+          <input matInput [formControl]="tag" placeholder="tag" />
+          <mat-error
+            *ngIf="tag.hasError('max-length') && (tag.dirty || tag.touched)"
+            >tag too long</mat-error
+          >
+        </mat-form-field>
+      </ng-container>
+    </div>
+    <div>
+      <!-- sources -->
+      <h4>ID sources</h4>
+      <cadmus-doc-references
+        [model$]="sources$"
+        (modelChange)="onSourcesChange($event)"
+      ></cadmus-doc-references>
+    </div>
+    <div>
+      <button
+        (click)="closeEditedId()"
+        type="button"
+        mat-icon-button
+        matTooltip="Discard ID changes"
+        color="warn"
+      >
+        <mat-icon>clear</mat-icon>
+      </button>
+      <button
+        type="submit"
+        [disabled]="form.invalid || form.pristine"
+        mat-icon-button
+        matTooltip="Save ID changes"
+        color="primary"
+      >
+        <mat-icon>check_circle</mat-icon>
       </button>
     </div>
-    <table *ngIf="ids?.length">
-      <thead>
-        <tr>
-          <th></th>
-          <th>id</th>
-          <th>rnk</th>
-          <th>tag</th>
-          <th>src</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let id of ids; let i = index">
-          <td>
-            <button
-              color="primary"
-              mat-icon-button
-              matTooltip="Edit this ID"
-              (click)="editId(i)"
-            >
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button
-              color="warn"
-              mat-icon-button
-              matTooltip="Delete this ID"
-              (click)="deleteId(i)"
-            >
-              <mat-icon>remove_circle</mat-icon>
-            </button>
-          </td>
-          <td>{{ id.id }}</td>
-          <td>{{ id.rank }}</td>
-          <td>{{ id.tag }}</td>
-          <td>{{ id.sources?.length || 0 }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </mat-tab>
-
-  <!-- editor -->
-  <mat-tab *ngIf="editedId" label="{{ editedId?.id || '(new ID)' }}">
-    <hr>
-    <form [formGroup]="form" (submit)="saveEditedId()">
-      <!-- id -->
-      <div>
-        <mat-form-field>
-          <input matInput [formControl]="id" placeholder="ID" />
-          <mat-error *ngIf="id.hasError('required') && (id.dirty || id.touched)"
-            >enter ID</mat-error
-          >
-          <mat-error
-            *ngIf="id.hasError('max-length') && (id.dirty || id.touched)"
-            >ID too long</mat-error
-          >
-        </mat-form-field>
-      </div>
-      <div>
-        <!-- rank -->
-        <mat-form-field style="width: 3em">
-          <input
-            matInput
-            [formControl]="rank"
-            placeholder="rank"
-            type="number"
-            min="0"
-          />
-        </mat-form-field>
-        &nbsp;
-        <!-- tag (bound) -->
-        <ng-container *ngIf="tagEntries">
-          <mat-form-field style="width: 8em">
-            <mat-select [formControl]="tag" placeholder="tag">
-              <mat-option *ngFor="let e of tagEntries" [value]="e.id">{{
-                e.value
-              }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </ng-container>
-        <!-- tag (free) -->
-        <ng-container *ngIf="!tagEntries">
-          <mat-form-field style="width: 6em">
-            <input matInput [formControl]="tag" placeholder="tag" />
-            <mat-error
-              *ngIf="tag.hasError('max-length') && (tag.dirty || tag.touched)"
-              >tag too long</mat-error
-            >
-          </mat-form-field>
-        </ng-container>
-      </div>
-      <div>
-        <!-- sources -->
-        <cadmus-doc-references
-          [model$]="references$"
-          (modelChange)="onReferencesChange($event)"
-        ></cadmus-doc-references>
-      </div>
-      <div>
-        <button
-          (click)="closeEditedId()"
-          type="button"
-          mat-icon-button
-          matTooltip="Discard ID changes"
-          color="warn"
-        >
-          <mat-icon>clear</mat-icon>
-        </button>
-        <button
-          type="submit"
-          [disabled]="form.invalid || form.pristine"
-          mat-icon-button
-          matTooltip="Save ID changes"
-          color="primary"
-        >
-          <mat-icon>check_circle</mat-icon>
-        </button>
-      </div>
-    </form>
-  </mat-tab>
-</mat-tab-group>
-<hr />
+  </form>
+</mat-expansion-panel>
 <div>
   <button
     (click)="close()"
@@ -136,7 +139,12 @@
   >
     <mat-icon>clear</mat-icon>
   </button>
-  <button mat-stroked-button matTooltip="Save IDs" color="primary" (click)="save()">
+  <button
+    mat-stroked-button
+    matTooltip="Save IDs"
+    color="primary"
+    (click)="save()"
+  >
     <mat-icon>check_circle</mat-icon> save IDs
   </button>
 </div>
