Fixed decorated IDs editor buttons

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
@@ -21,6 +21,7 @@
     >
       <td>
         <button
+          type="button"
           color="primary"
           mat-icon-button
           matTooltip="Edit this ID"
@@ -29,6 +30,7 @@
           <mat-icon>edit</mat-icon>
         </button>
         <button
+          type="button"
           color="warn"
           mat-icon-button
           matTooltip="Delete this ID"
