Fixes to CitedPersonComponent

--- a/src/app/sub-editors-demo/sub-editors-demo.component.html
+++ b/src/app/sub-editors-demo/sub-editors-demo.component.html
@@ -73,7 +73,7 @@
         <cadmus-cited-person
           [langEntries]="langEntries"
           [typeEntries]="namePartTypeEntries"
-          (personChage)="onCitedPersonChange($event)"
+          (personChange)="onCitedPersonChange($event)"
         ></cadmus-cited-person>
         <div *ngIf="lastCitedPerson">
           <pre>{{ lastCitedPerson | json }}</pre>
